Bug 25242: Improve column wrapping for holdingst
This patch attempts to improve the column wrapping for the holdingst
datatable and sets the tabel to fixed width to prevent overlapping
with other content on high zoom levels/low width screen sizes.

Test plan
1/ Build the OPAC CSS from the updated SCSS
2/ Navigate to an item with holdings visible in the OPAC
3/ 'Play' with various window sizes and zoom levels.
4/ The table should not overlap with right navigation content
5/ Signoff

NOTE: This is an alternative patch to those pushed and reverted that
attempted to provide a global fix to overlap issues. This patch
specifically targets just the holdings table in the opac detail view.



(cherry picked from commit 6e5142e61be8604c5144077d15e3782e6853677b)

(cherry picked from commit 0c6c443d798c154057e76fd7dcc5803f17fe1fd8)

--- a/koha-tmpl/opac-tmpl/bootstrap/css/src/opac.scss
+++ b/koha-tmpl/opac-tmpl/bootstrap/css/src/opac.scss
@@ -2661,6 +2661,14 @@ button {
     overflow: auto;
 }
 
+#holdingst {
+    table-layout: fixed;
+
+    td {
+        overflow-wrap: break-word;
+    }
+}
+
 #shelfbrowser {
     table {
         margin: 0;
